--- a/src/sample/systemPackages/aptYum.fxml
+++ b/src/sample/systemPackages/aptYum.fxml
@@ -92,6 +92,14 @@
                   <Insets left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
+            <Button fx:id="cdBackBtn" mnemonicParsing="false" onAction="#cdBackBtnClick" prefHeight="35.0" prefWidth="135.0" text="Back">
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="2.0" top="8.0" />
+               </VBox.margin>
+            </Button>
          </children>
          <BorderPane.margin>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
