--- a/src/sample/systemPackages/compressedFilesCont.fxml
+++ b/src/sample/systemPackages/compressedFilesCont.fxml
@@ -76,6 +76,12 @@
                   <Insets bottom="50.0" left="130.0" right="50.0" top="50.0" />
                </VBox.margin>
             </ImageView>
+            <Region prefHeight="150.0" prefWidth="480.0" />
+            <Button fx:id="cdBackBtn" mnemonicParsing="false" onAction="#cdBackBtnClick" prefHeight="35.0" prefWidth="135.0" text="Back">
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+            </Button>
          </children>
          <BorderPane.margin>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
