--- a/src/sample/systemPackages/repositories.fxml
+++ b/src/sample/systemPackages/repositories.fxml
@@ -73,9 +73,17 @@
                   <Image url="@../Assets/linuxRepo.png" />
                </image>
                <VBox.margin>
-                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+                  <Insets bottom="2.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </ImageView>
+            <Button fx:id="cdBackBtn" mnemonicParsing="false" onAction="#cdBackBtnClick" prefHeight="35.0" prefWidth="135.0" text="Back">
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </VBox.margin>
+            </Button>
          </children>
          <BorderPane.margin>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
