--- a/src/sample/usersAndGroups/root.fxml
+++ b/src/sample/usersAndGroups/root.fxml
@@ -60,7 +60,7 @@
    <left>
       <VBox prefHeight="591.0" prefWidth="484.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="You want to make an account with sudo for your brother, James. What would you type in the terminal to make an account called &quot;james&quot; using the adduser command?" wrappingWidth="456.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="You want to make an account with sudo for your brother, James. What would you type in the terminal to make an account called &quot;james&quot; using the adduser command? &#10;&#10;Remember, you only have to make the account. You don't add the account to sudo yet. That is done in a seperate step." wrappingWidth="456.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -73,7 +73,7 @@
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
                <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
                </VBox.margin>
             </TextField>
             <HBox prefHeight="100.0" prefWidth="200.0">
@@ -152,7 +152,7 @@
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
                <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
                </VBox.margin>
             </TextField>
             <HBox fx:id="rHBox" prefHeight="100.0" prefWidth="200.0">
