--- a/src/sample/whatIsGnuAndLinux/gnuAndLinux.fxml
+++ b/src/sample/whatIsGnuAndLinux/gnuAndLinux.fxml
@@ -85,7 +85,7 @@
       </VBox>
    </left>
    <right>
-      <VBox prefHeight="570.0" prefWidth="240.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="575.0" prefWidth="278.0" BorderPane.alignment="CENTER">
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -102,13 +102,13 @@
                   <Image url="@../Assets/gnuLogo.png" />
                </image>
             </ImageView>
-            <Label prefHeight="63.0" prefWidth="200.0" text="This is the logo for GNU,&#10;a Wildebeest is also called a GNU, &#10;hence the logo" textFill="WHITE" VBox.vgrow="ALWAYS" />
-            <VBox prefHeight="582.0" prefWidth="486.0">
+            <Label text="This is the logo for GNU,&#10;a Wildebeest is also called a GNU, &#10;hence the logo" textFill="WHITE" VBox.vgrow="ALWAYS" />
+            <VBox prefHeight="108.0" prefWidth="232.0">
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
                <children>
-                  <Region prefHeight="259.0" prefWidth="208.0" />
+                  <Region prefHeight="95.0" prefWidth="216.0" />
                   <HBox prefHeight="0.0" prefWidth="208.0">
                      <children>
                         <Region prefHeight="37.0" prefWidth="137.0" />
